# Custom-Swiss-Chess

./: CMakeLists.txt  README.md
src/: Player.cpp  Player.h  Tournament.cpp  Tournament.h  main.cpp
